--- a/css/styles.css
+++ b/css/styles.css
@@ -162,49 +162,10 @@ form {
   justify-content: center;
 }
 
-.input__group {
-  display: flex;
-  flex-direction: column;
-  margin: 8px;
-  align-items: center;
-}
-
-.input__group label {
-  font-size: 1rem;
-  font-weight: bold;
-  margin-bottom: 8px;
-  opacity: 0.7;
-  text-align: center;
-}
 
 .form__flex-wrap .input__group label {
   margin-left: 0px;
   margin-bottom: 8px;
-}
-
-.input__form i {
-  text-align: center;
-  display: block;
-  font-style: normal;
-  color: #aaa;
-  font-size: 0.9rem;
-  margin: 8px auto;
-}
-
-.input__form>.form__row input {
-  margin: 0px auto;
-}
-
-input {
-  border: 0px solid white;
-  border-radius: 40px;
-  padding: 8px 16px;
-  font-size: 1.25rem;
-  font-family: inherit;
-  color: inherit;
-  font-weight: bold;
-  
-  margin: 8px 0px;
 }
 
 input[type=text]:placeholder-shown {
@@ -349,9 +310,27 @@ input[type=text] {
   display: block;
 }
 
-.selectHours,
-.selectMinutes {
+.button_valid {
+  color: #fff9f9;
+  font-family: inherit;
+  font-weight: bold;
+  padding: 8px 16px;
+  border-width: 0px;
+  border-radius: 40px;
+  background: #1ecf62;
+  font-size: 1.2rem;
+  
+  position: relative;
   margin: 16px auto;
+  display: block;
+}
+
+.button_valid:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+  opacity: 1;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.05), 0 3px 6px rgba(0, 0, 0, 0.09);
+  transition: 0.2s all;
 }
 
 .button:hover {
@@ -379,116 +358,6 @@ select {
   min-width: 77px;
 }
 
-#weekdays p {
-  text-align: center;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 800;
-  font-size: 1rem;
-  color: #837865;
-}
-
-.day:not(:last-child) {
-  border-right: 1px solid white;
-}
-
-.hour {
-  width: 100%;
-  height: calc(900px / 18);
-}
-
-.minutes {
-  box-sizing: border-box;
-  width: 100%;
-  min-width: 77px;
-  text-align: center;
-  height: 50%;
-}
-
-.minutes p {
-  margin: 0px;
-  height: 0px;
-  margin-block-end: 0;
-  margin-block-start: 0;
-  text-align: center;
-  padding: 4px 0px;
-  font-family: 'Varela Round', sans-serif;
-  font-weight: 800;
-  font-size: 1rem;
-  color: #4f5858;
-}
-
-#hourCol p {
-  margin: 0px;
-  margin-block-end: 0;
-  margin-block-start: 0;
-  text-align: right;
-  font-weight: 800;
-  font-size: 1rem;
-  height: calc(900px / 18);
-  transform: translateY(-17%);
-  font-family: 'Raleway', sans-serif;
-  color: #837865;
-}
-
-#finalResult {
-  align-items: center;
-  width: 90%;
-}
-
-#weekCalendar {
-  display: flex;
-  border-radius: 5px;
-  width: 100%;
-  min-width: 550px;
-  border: 1px solid rgb(77, 77, 77);
-}
-
-#calendarAndHours {
-  display: flex;
-  border-radius: 5px;
-  width: 100%;
-  min-width: 550px;
-}
-
-#weekdays {
-  display: flex;
-}
-
-.task5, .task6 {
-  background-color: #FBC169;
-}
-
-.task0 {
-  background-color: #97e8f1;
-}
-
-.task7 {
-  background-color: #c9c9ff;
-}
-
-.task1 {
-  background-color: lightgray;
-}
-
-.task4 {
-  background-color: #92acf3;
-}
-
-.task2 {
-  background-color: #9DCCEA;
-}
-
-.task3 {
-  background-color: lightpink;
-}
-
-.task9 {
-  background-color: #DBFBDB;
-}
-
-.task8 {
-  background-color: #ffbdbd;
-}
 
 .topExt:not(.task1) {
   border-top-left-radius: 5px;
